--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,37 +2,21 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.trainerItemContainer {
+  border: 1px solid red;
+  width: 430px;
+  margin: auto;
+  text-align: center;
+  margin-top: 3rem;
+  background: rgb(115, 255, 0)
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.trainerItemContainer:hover {
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#root {
+background-image: url(https://launchpadbygaurav.files.wordpress.com/2018/05/banner.jpg);
+background-repeat: no-repeat;
+background-size: 1000px 800px;
 }
